--- a/apiBooks/client/src/app/components/navbar/navbar.component.html
+++ b/apiBooks/client/src/app/components/navbar/navbar.component.html
@@ -20,7 +20,7 @@
       <li class="nav-item" *ngIf="isLogged">
         <a class="nav-link" routerLink="/user/profile">Profile</a>
       </li>
-      <li class="nav-item" *ngIf="isLogged">
+      <li class="nav-item" >
         <a class="nav-link" routerLink="/admin/list-books">List Books</a>
       </li>
       <li class="nav-item" *ngIf="!isLogged">
