Insertar nuevo Registro - Angular 6

--- a/apiBooks/client/src/app/components/admin/list-book/list-book.component.html
+++ b/apiBooks/client/src/app/components/admin/list-book/list-book.component.html
@@ -30,7 +30,9 @@
             <a href="/admin/list-books" class="btn btn-danger" (click)="onDeleteBook(book.id)">Delete</a>
           </td>
         </tr>
+
       </tbody>
     </table>
   </div>
 </div>
+<app-modal></app-modal>
