--- a/apiBooks/client/src/app/components/navbar/navbar.component.html
+++ b/apiBooks/client/src/app/components/navbar/navbar.component.html
@@ -7,7 +7,7 @@
 
   <div class="collapse navbar-collapse" id="mainNavbar">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item" *ngIf="isLogged">
+      <li class="nav-item" >
         <a class="nav-link" routerLink="/offers">Offers
         </a>
       </li>
@@ -17,7 +17,7 @@
         <a class="nav-link" routerLink="/user/register">Register
         </a>
       </li>
-      <li class="nav-item" *ngIf="isLogged">
+      <li class="nav-item" >
         <a class="nav-link" routerLink="/user/profile">Profile</a>
       </li>
       <li class="nav-item" >
