--- a/apiBooks/client/src/app/app.component.html
+++ b/apiBooks/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar> 
-<app-hero></app-hero>
+<app-hero [hidden]="hideElement"></app-hero>
 <div class="container">
   <router-outlet></router-outlet>
 </div>
