Angular Custom Pipe - Angular 6

--- a/apiBooks/client/src/app/components/offers/offers.component.html
+++ b/apiBooks/client/src/app/components/offers/offers.component.html
@@ -10,7 +10,7 @@
               </p>
               <h4 routerLink="/book/{{book.id}}" class="card-title">{{book.titulo}}</h4>
               <p class="card-text">
-                {{book.descripcion }}
+                {{book.descripcion | truncateText:20}}
               </p>
               <div class="container-precio-idioma">
                 <p class="badge badge-info">
